2002-12-18  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-ldap-client.adb:
	(Is_Open): Use /= instead of "not =" as per new coding style.

	* aws-server-protocol_handler.adb:
	(Get_File_Data): Use /= instead of "not =" as per new coding style.

	* aws-jabber.adb:
	(Destroy): Use /= instead of "not =" as per new coding style.

	* aws-client.adb:
	(Close): Use /= instead of "not =" as per new coding style.

	* aws-net.adb:
	Back-out previous change.

2002-12-17  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(SOURCES): Add Jabber only if XMLADA defined.

	* aws-net-ssl.adb:
	Fix TLS casing.

	* aws-net-ssl.ads:
	(Method): Fix TLS casing.

	* aws-server.ads, aws-server.adb:
	(Slots.Get): Renamed Slots.Set.
	(Slots.Set): Protected data renamed Table.
	Minor reformatting.

	* aws-client.adb:
	(Free): Removed.
	(Close): Call Net.Free to release memory associated with the
	 socket. Right fix for the memory leak, see previous check-in.
	(Create): If connect fail, correctly release socket memory.

2002-12-16  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-client.adb:
	Back out previous change. Was wrong.
	Minor reformatting.

	* aws-net-ssl.adb:
	Fix casing.

2002-12-16  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-containers-tables-set.adb:
	Minor reformatting.
	Add some comments.
	Add ??? where comments are needed.

	* aws-containers-tables.ads:
	Fix comment. Some comments where having a DOS line terminator.

	* aws-server.adb:
	(Accept_Socket_Serialized): If exception is raised, free socket
	 memory before leaving. Fix memory leak.
	(Shutdown): Call Net.Free to release socket memory. Fix memory leak.

	* aws-ldap.ads:
	Add comment.

	* aws-net-ssl.adb:
	Fix comment.
	(Bind): Removed, inherited routine is ok.
	(Listen): Idem.
	(Get_FD): Idem.
	(Peer_Addr): Idem.
	Fix reference to the Net.Std.Socket_Type as now it is inherited.

	* aws-net-ssl.ads:
	(Socket_Type): Inherit from Net.Std.Socket_Type. Removed S field.
	(Bind): Removed, inherited routine is ok.
	(Listen): Idem.